# minior-fork

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  lib.rs  minio.rs
src/core/: bucket.rs  copy.rs  delete.rs  get.rs  mod.rs  pagination_iter.rs  upload.rs
src/core/upload/: mod.rs  upload_object.rs  upload_object_multi.rs  upload_object_multi_presigned.rs  upload_object_presigned.rs  util.rs
src/minio/: mod.rs  upload_object_impl.rs
src/tests/: bucket.rs  delete.rs  mod.rs  pagination_iter.rs  upload.rs  upload_get.rs
src/tests/util/: mod.rs  test_client.rs  test_error.rs
