[package]
name = "minior"
version = "0.1.3"
edition = "2021"
license = "MIT"
keywords = ["minio"]
repository = "https://gitlab.com/robertlopezdev/minior"
description = "Ergonomic Minio Client"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.12.0", features = ["s3"] }
tokio = "1.35.1"

[dev-dependencies]
reqwest = { version = "0.11.23", features = ["stream"] }
uuid = { version = "1.6.1", features = ["v4"] }
tokio = { version = "1.35.1", features = ["full"] }