[package]
name = "minior"
version = "0.1.12"
edition = "2021"
license = "MIT"
keywords = ["minio"]
repository = "https://gitlab.com/robertlopezdev/minior"
description = "Ergonomic Minio Client"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pagination_iter = ["aws-smithy-async"]

[dependencies]
aws-config = { version = "1.2.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
tokio = "1.38.0"
aws-smithy-async = { version = "1.2.1", optional = true }

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["stream"] }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.38.0", features = ["full"] }

[package.metadata.docs.rs]
features = ["pagination_iter"]